# alexandria

./: .travis.yml  LICENSE  Makefile  README.md  docker-compose.yml  import.sh
client/: .gitignore  bower.json  package.json
server/: .gitignore  Application.hs  Dockerfile  Foundation.hs  Importer.hs  Model.hs  ModelOrphans.hs  Slack.hs  TextShowOrphans.hs  alexandria-server.cabal  stack.yaml
server/Handler/: Home.hs
server/app/: ImporterMain.hs
server/config/: models  settings.yml  test-settings.yml
