name:              alexandria-server
version:           0.0.0
cabal-version:     >= 1.10
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Importer
                     Model
                     ModelOrphans
                     Settings
                     Settings.StaticFiles
                     Slack
                     Handler.Common
                     Handler.Home
                     TextShowOrphans

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    default-language:   Haskell2010
    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        FlexibleInstances
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections
                        RecordWildCards
                        RankNTypes
                        LambdaCase
                        StandaloneDeriving
                        GeneralizedNewtypeDeriving
                        ScopedTypeVariables
                        OverloadedStrings


    build-depends: base
                 , aeson
                 , aeson-better-errors
                 , bytestring
                 , case-insensitive
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , data-default
                 , directory
                 , directory
                 , fast-logger
                 , file-embed
                 , filepath
                 , http-api-data
                 , http-conduit
                 , lens
                 , monad-control
                 , monad-logger
                 , mtl
                 , optparse-applicative
                 , path-pieces
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , resourcet
                 , safe
                 , scientific
                 , template-haskell
                 , text
                 , text-show
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-core
                 , yesod-static

executable         alexandria-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, alexandria-server

    default-language:   Haskell2010
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

executable         alexandria-importer
    if flag(library-only)
        Buildable: False

    main-is:           ImporterMain.hs
    hs-source-dirs:    app
    build-depends:     base, alexandria-server

    default-language:   Haskell2010
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N



test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    default-language:   Haskell2010
    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        FlexibleInstances
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections

    build-depends: base
                 , alexandria-server
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
